--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-todoapp",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "homepage": "https://Aayman-star.github.io/react-todo-app",
   "type": "module",
